@@ -996,16 +996,31 @@
         </itemizedlist>
       </section>
 
-      <section id="console.mode.extra.options">
+      <section id="console.mode.option.quiet">
         <title>Quiet option</title>
 
-        <para>There is one extra command line parameter specific to console
-        mode: <literal>--quiet. </literal>In the quiet mode, less info is
+        <para>An extra command line parameter specific to console
+        mode: <literal>--quiet.</literal> In the quiet mode, less info is
         logged to the screen. The messages you would usually find in the
         status bar are not displayed.</para>
 
         <para>Usage: <literal>java -jar <application>OmegaT</application>.jar
-        /path/to/project --quiet</literal></para>
+        /path/to/project --mode=console-translate --quiet</literal></para>
+      </section>
+      
+      <section id="console.mode.option.validatetags">
+        <title>Tag validation option</title>
+
+        <para>Another extra command line parameter specific to console
+        mode: <literal>--tag-validation=[block|warn].</literal> When this 
+        parameter is added, tag validation is done prior to translation/aligning.
+        If the value is <literal>block</literal>, then on tag errors the errors
+        are printed and the program stops. If the value is <literal>warn</literal>
+        then the errors are printed but OmegaT continues.
+        </para>
+
+        <para>Usage: <literal>java -jar <application>OmegaT</application>.jar
+        /path/to/project --mode=console-translate --tag-validation=block</literal></para>
       </section>
     </section>
   </section>
